# whenThen

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  showcase.html  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: capture-screenshots.sh  index.html
docs/demo-data/: interests.json  playlets.json  settings.json  sources.json
src/: App.svelte  ShowcaseApp.svelte  app.css  showcase.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/locales/: en.json  es.json
src-tauri/src/: dock.rs  errors.rs  i18n.rs  lib.rs  main.rs  move_to_applications.rs  state.rs
src-tauri/src/commands/: associations.rs  automation.rs  chromecast.rs  media.rs  mod.rs  playback.rs  rss.rs  scraper.rs  settings.rs  torrent.rs
src-tauri/src/models/: config.rs  device.rs  media_info.rs  mod.rs  playback.rs  rss.rs  scraper.rs  subtitle.rs  torrent.rs
src-tauri/src/services/: chromecast_device.rs  chromecast_discovery.rs  folder_watcher.rs  media_info.rs  media_server.rs  mod.rs  opensub_client.rs  rss.rs  scraper.rs  subtitle_handler.rs  subtitle_scorer.rs  subtitle_search.rs  torrent_engine.rs
src-tauri/src/tray/: macos_drag.rs  mod.rs
src/lib/i18n/: index.ts  state.svelte.ts
src/lib/services/: action-registry.ts  drag-drop.ts  execution-pipeline.ts  execution-registry.ts  index.ts  logger.ts  notifications.ts  playlet-assignment.ts  playlet-templates.ts  tauri-commands.ts  tauri-events.ts  torrent-name-cleaner.ts  tray-panel.ts  (+1 more)
(+64 files in other folders)
